--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   sqflite: ^1.1.7
   path_provider: ^1.3.0
   shared_preferences: ^0.5.3+4
+  flutter_spinkit: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
